<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sexTextView">Sexo</string>
    <string name="login_trainerTextEditInput">Entrenador</string>
    <string name="login_ImageView">Login</string>
    <string name="maleRadiobutton">Masculino</string>
    <string name="femaleRadiobutton">Femenino</string>
    <string name="loginButtonText">Entrar</string>
    <string name="pkmDefaultName">Gyrados</string>
    <string name="empty_mail_text">Pokemon no identificado</string>
    <string name="textview">TextView</string>
    <string name="Search">Nombre del Pokemon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text">Ha ocurrido un error!</string>
    <string name="Favorite">Favorito</string>
    <string name="pkmName">Pokemon name</string>
    <string name="_0">0</string>
    <string name="base_experience">Base experience</string>
    <string name="shiny_male">shiny male</string>
    <string name="female">female</string>
    <string name="shiny_female">shiny female</string>
    <string name="male">male</string>
    <string name="pokemon_details">Pokemon Details</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="location_area_encounters">Location area encounters</string>
    <string name="pokemon_type">Pokemon Type</string>
    <string name="pokemonimage">PokemonImage</string>
    <string name="pokemonfavorite">PokemonFavorite</string>
    <string name="Recent">Recientes</string>
    <string name="allList">Pokemon</string>
    <string name="SearchRecent">Buscar Recientes</string>
</resources>