<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <ImageView
            android:id="@+id/loginImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/login_ImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_pokemon_8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trainerTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/trainerTextEditInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@color/white"
                android:imeOptions="actionDone"
                android:hint="@string/login_trainerTextEditInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sexTextView"
            app:layout_constraintEnd_toEndOf="@+id/trainerTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/trainerTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/trainerTextInputLayout" />

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/sexTextView"
            app:layout_constraintStart_toStartOf="@+id/sexTextView"
            app:layout_constraintTop_toBottomOf="@+id/sexTextView">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/maleRadiobutton" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/femaleRadiobutton" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/loginButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/topLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/topLayout"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</androidx.constraintlayout.widget.ConstraintLayout>
